--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  font-family: 'Sorts Mill Goudy', serif;
+  background-color: #4e4e4e;
+  color: #4e4e4e;
+  overflow: auto;
+}
+
+hr {
+  max-width: 100px;
+  border-top: 1px solid #606c38;
+  border-width: 2px;
+  border-color: #606c38;
+}
