updated active route css

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,10 +2,10 @@
   <a [routerLink]="['/']" class="logo">M&G</a>
   <div class="header-right">
     <!-- TODO: Figure out how to add active class -->
-    <a [routerLink]="['/welcome']">Home</a>
-    <a [routerLink]="['/photos']">Photos</a>
-    <a [routerLink]="['/info']">Info</a>
-    <a [routerLink]="['/faq']">FAQ</a>
-    <a [routerLink]="['/rsvp']">RSVP</a>
+    <a routerLinkActive='active' [routerLink]="['/welcome']">Home</a>
+    <a routerLinkActive='active' [routerLink]="['/photos'] ">Photos</a>
+    <a routerLinkActive='active' [routerLink]="['/info']">Info</a>
+    <a routerLinkActive='active' [routerLink]="['/faq']">FAQ</a>
+    <a routerLinkActive='active' [routerLink]="['/rsvp']">RSVP</a>
   </div>
 </div>
