--- a/src/app/rsvp/rsvp.component.css
+++ b/src/app/rsvp/rsvp.component.css
@@ -41,7 +41,11 @@ select {
   box-sizing: border-box;
 }
 
-input[type="submit"] {
+input.ng-touched.ng-invalid {
+  border: 1px solid red;
+}
+
+button[type="submit"] {
   width: 100%;
   background-color: #606c38;
   color: white;
@@ -52,7 +56,7 @@ input[type="submit"] {
   cursor: pointer;
 }
 
-input[type="submit"]:hover {
+button[type="submit"]:hover {
   background-color: #4c562d;
 }
 
