--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -11,20 +11,64 @@
     </p>
   </div>
   <div class="form-section">
-    <form action="/action_page.php">
+    <form novalidate (ngSubmit)="save()" [formGroup]="customForm">
       <div class="flexbox-container">
         <div class="flexbox-item">
           <label for="fname">First name:</label><br />
-          <input type="text" id="fname" name="fname" placeholder="Smooth" />
+          <input
+            type="text"
+            id="fname"
+            required
+            minlength="2"
+            formControlName="fname"
+            placeholder="Smooth"
+            [ngClass]="{
+              'is-invalid':
+                (customForm.get('fname')?.touched ||
+                  customForm.get('fname')?.dirty) &&
+                !customForm.get('fname')?.valid
+            }"
+          />
+          <!-- TODO: Fix this erro div  -->
+          <div style="text-align: center;">
+            <span *ngIf="customForm.get('fname')?.errors?.['required']">
+              Please enter your first name.
+            </span>
+            <span *ngIf="customForm.get('fname')?.errors?.['minlength']">
+              The first name must be longer than 2 characters.
+            </span>
+          </div>
         </div>
         <br />
         <div class="flexbox-item">
           <label for="lname">Last name:</label><br />
-          <input type="text" id="lname" name="lname" placeholder="Jackson" />
+          <input
+            type="text"
+            id="lname"
+            required
+            minlength="2"
+            formControlName="lname"
+            placeholder="Jackson"
+          />
         </div>
       </div>
       <br /><br />
-      <input type="submit" value="Submit" />
+      <button type="submit" value="Submit" [disabled]="!customForm.valid">
+        Submit
+      </button>
     </form>
+  </div>
+
+  <div>
+    <!-- Displays automatic updates of items in firestore -->
+    <!-- <ul>
+      <li *ngFor="let item of items | async">
+        {{ item.name }}
+      </li>
+    </ul> -->
+    <br>
+    <br />Dirty: {{ customForm.dirty }} <br />Touched: {{ customForm.touched }}
+    <br />Valid: {{ customForm.valid }} <br />Value:
+    {{ customForm.value | json }}
   </div>
 </div>
