--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -52,13 +52,13 @@
   <div class="flexbox-container">
     <div class="flexbox-item flexbox-item-1">
       <h4>Question</h4>
-      <h3>Can I bring a date?</h3>
+      <h3>Can I bring a plus one?</h3>
     </div>
     <div class="vertical"></div>
     <div class="flexbox-item flexbox-item-1">
       <h4>Answer</h4>
       <h5>
-        You can definitely bring a plus one! If you are, please let us know so
+        You can bring a plus one! BUT if you are, please let us know so
         we can make sure no one sits on the floor
       </h5>
     </div>
