--- a/src/app/rsvp/rsvp.component.css
+++ b/src/app/rsvp/rsvp.component.css
@@ -69,3 +69,23 @@ button[type="submit"]:hover {
   margin: 10px;
   width: 100%;
 }
+
+/* ---------- SEARCHED NAME SECTION ---------- */
+.search-results {
+  /* background-color: #55daf8b4; */
+}
+
+.search-results ul {
+  list-style-type: none;
+}
+
+.search-results button {
+  width: 120px;
+  background-color: #606c38;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
