modified color palette

--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -12,12 +12,13 @@
     <div class="vertical"></div>
     <div class="flexbox-item flexbox-item-1">
       <h4>Answer</h4>
-      <h5>March 15, 2023 please!</h5>
+      <h5>May 13, 2023 please!</h5>
     </div>
   </div>
   <br /><br /><br />
   <!-- ------------------------- -->
   <!-- ---------- FAQ ---------- -->
+  <!-- TODO: come up with attire -->
   <div class="flexbox-container">
     <div class="flexbox-item flexbox-item-1">
       <h4>Question</h4>
@@ -26,9 +27,11 @@
     <div class="vertical"></div>
     <div class="flexbox-item flexbox-item-1">
       <h4>Answer</h4>
+      <h5>Semi-Formal:</h5>
+      <h5>Ladies Example: A below-the-knee dress or a dressy skirt and top</h5>
       <h5>
-        Beach Attire: Wear linen pants, short-sleeved button downs, maxi
-        dresses, and sandals. Anything you feel comfortable in!
+        Gentleman Example: A dress shirt and slacks, dark or light depending on
+        your preference, with the option to wear a tie.
       </h5>
     </div>
   </div>
@@ -58,8 +61,8 @@
     <div class="flexbox-item flexbox-item-1">
       <h4>Answer</h4>
       <h5>
-        You can bring a plus one! BUT if you are, please let us know so
-        we can make sure no one sits on the floor
+        You can bring a plus one! BUT if you are, please let us know ahead of
+        time so we can make sure no one sits on the floor.
       </h5>
     </div>
   </div>
@@ -74,7 +77,14 @@
     <div class="vertical"></div>
     <div class="flexbox-item flexbox-item-1">
       <h4>Answer</h4>
-      <h5>Yes we are! You can view our registry at this link - TBD</h5>
+      <h5>
+        Yes we are! You can view our registry at this link -
+        <a
+          href="https://www.amazon.com/wedding/meghan-shipman-grant-risk--may-2023/registry/MIIAQW0SK95U"
+          target="_blank"
+          >Our Registry</a
+        >
+      </h5>
     </div>
   </div>
   <br /><br /><br />
@@ -89,8 +99,8 @@
     <div class="flexbox-item flexbox-item-1">
       <h4>Answer</h4>
       <h5>
-        Please arrive 25-30 minutes before the ceremony. It'll be early so bring
-        coffee!
+        Please arrive 25-30 minutes before the ceremony. It'll be later in the
+        day, so bring that positive spirit!
       </h5>
     </div>
   </div>
