--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -51,7 +51,7 @@
 
 /* ---------- WELCOME SECTION ---------- */
 .welcome-section {
-  background-color: #fff6e3;
+  background-color: #CBE8EB;
   text-align: center;
   height: 100%;
   padding: 3%;
