--- a/src/app/faq/faq.component.css
+++ b/src/app/faq/faq.component.css
@@ -1,5 +1,5 @@
 .faq-section {
-  background-color: #fff6e3;
+  background-color: #CBE8EB;
   text-align: center;
   height: 100%;
   padding-bottom: 2%;
@@ -26,7 +26,7 @@
 .flexbox-item {
   width: 100%;
   margin: 10px;
-  padding: 10px;
+  padding: 50px;
 }
 
 .flexbox-item-1 {
@@ -36,5 +36,9 @@
 @media only screen and (max-width: 768px) {
   .faq-section h1 {
     padding-top: 20%;
+  }
+
+  .flexbox-item {
+    padding: 10px;
   }
 }
