--- a/src/app/info/info.component.css
+++ b/src/app/info/info.component.css
@@ -1,5 +1,5 @@
 .info-section {
-  background-color: #fff6e3;
+  background-color: #CBE8EB;
   text-align: center;
   height: 100%;
   padding-bottom: 2%;
@@ -17,7 +17,7 @@
 }
 
 .photo-gallery-section {
-  background-color: #fff6e3;
+  background-color: #A6D8DD;
   text-align: center;
   height: 100%;
   padding-bottom: 2%;
@@ -35,7 +35,7 @@
 }
 
 .photo-gallery-pictures {
-  background-color: #fff6e3;
+  background-color: #CBE8EB;
   display: flex;
   flex-wrap: wrap;
   padding: 0 4px;
@@ -50,5 +50,5 @@
   margin-top: 10px;
   margin-bottom: 10px;
   border-radius: 10px;
-  box-shadow: 4px 4px #c7b99d;
+  box-shadow: 4px 4px #A6D8DD;
 }
