--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ body {
 
 hr {
   max-width: 100px;
-  border-top: 1px solid #606c38;
+  border-top: 1px solid #439469;
   border-width: 2px;
-  border-color: #606c38;
+  border-color: #439469;
 }
