--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -104,6 +104,6 @@
     </div>
   </div>
   <div *ngIf="this_is_me">
-    <app-rsvp-verify [invitee]="sent_invitee"></app-rsvp-verify>
+    <app-rsvp-verify [invitee]="sent_invitee" [inviteeArray]="inviteeArray"></app-rsvp-verify>
   </div>
 </div>
