--- a/src/app/rsvp-verify/rsvp-verify.component.css
+++ b/src/app/rsvp-verify/rsvp-verify.component.css
@@ -30,8 +30,9 @@
 
 .no-attend-button button {
   width: 200px;
-  background-color: #b8c199;
-  color: white;
+  background-color: #C9E4B7;
+  box-shadow: 1px 1px gray;
+  color: black;
   padding: 14px 0;
   margin: 8px 4px;
   border: none;
@@ -40,7 +41,8 @@
 }
 
 .attend-button button {
-  background-color: #4c562d;
+  background-color: #8EC668;
+  box-shadow: 1px 1px gray;
   width: 200px;
   color: white;
   padding: 14px 0;
@@ -48,6 +50,21 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+button {
+  width: 50%;
+  background-color: #8EC668;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #ACD591;
 }
 
 @media only screen and (max-width: 768px) {
