Created toast notifications and updated rsvp page

--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,5 +1,5 @@
 <div class="info-section">
-  <h1>The Info Section!</h1>
+  <h1>Our Story!</h1>
   <hr />
   <p>⚠️ Currently Under Maintenance ⚠️</p>
   <!-- TODO: remove this div and update with info about wedding -->
