--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     <!-- TODO: Figure out how to add active class -->
     <a routerLinkActive='active' [routerLink]="['/welcome']">Home</a>
     <a routerLinkActive='active' [routerLink]="['/photos'] ">Photos</a>
-    <a routerLinkActive='active' [routerLink]="['/info']">Info</a>
+    <a routerLinkActive='active' [routerLink]="['/story']">Our Story</a>
     <a routerLinkActive='active' [routerLink]="['/faq']">FAQ</a>
     <a routerLinkActive='active' [routerLink]="['/rsvp']">RSVP</a>
   </div>
