--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -12,7 +12,7 @@
     <div class="vertical"></div>
     <div class="flexbox-item flexbox-item-1">
       <h4>Answer</h4>
-      <h5>May 13, 2023 please!</h5>
+      <h5>No later than May 17, 2023 please!</h5>
     </div>
   </div>
   <br /><br /><br />
@@ -99,8 +99,8 @@
     <div class="flexbox-item flexbox-item-1">
       <h4>Answer</h4>
       <h5>
-        Please arrive 25-30 minutes before the ceremony. It'll be later in the
-        day, so bring that positive spirit!
+        Please arrive 25-30 minutes before the ceremony. It'll be at 5, so bring
+        that positive spirit!
       </h5>
     </div>
   </div>
