--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -1,7 +1,7 @@
 <div class="photo-gallery-section">
   <h1>Our Gallery!</h1>
   <hr />
-  <p>This is a photo dumb 💩 of our favorite pictures ... you are welcome.</p>
+  <p>This is a photo dump 💩 of our favorite pictures ... you are welcome.</p>
 </div>
 <div class="photo-gallery-pictures">
   <img src="../../assets/photo-gallery/1.jpeg" loading="auto" alt="" />
@@ -34,7 +34,7 @@
   <img src="../../assets/photo-gallery/31.jpeg" loading="auto" alt="" />
   <img src="../../assets/photo-gallery/32.jpeg" loading="auto" alt="" />
   <img src="../../assets/photo-gallery/33.jpeg" loading="auto" alt="" />
-  <img src="../../assets/photo-gallery/34.jpeg" loading="auto" alt="" />
+  <img style="object-position: 100% 0;" src="../../assets/photo-gallery/34.jpeg" loading="auto" alt="" />
   <img src="../../assets/photo-gallery/35.jpeg" loading="auto" alt="" />
   <img src="../../assets/photo-gallery/36.jpeg" loading="auto" alt="" />
   <img src="../../assets/photo-gallery/37.jpeg" loading="auto" alt="" />
@@ -48,7 +48,6 @@
   <img src="../../assets/photo-gallery/46.jpeg" loading="auto" alt="" />
   <img src="../../assets/photo-gallery/47.jpeg" loading="auto" alt="" />
   <img src="../../assets/photo-gallery/48.jpeg" loading="auto" alt="" />
-  <img src="../../assets/photo-gallery/49.jpeg" loading="auto" alt="" />
   <img src="../../assets/photo-gallery/50.jpeg" loading="auto" alt="" />
   <img src="../../assets/photo-gallery/51.jpeg" loading="auto" alt="" />
   <img src="../../assets/photo-gallery/52.jpeg" loading="auto" alt="" />
