--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -8,21 +8,53 @@
   <h2>Welcome!</h2>
   <hr />
   <p>
-    👋 Hello friends and family! This is the destination for incredibly
-    detailed stuff 🤷‍♂️🤷‍♀️ ... brought to you by Grant and Meghan's brains!
-    🧠
+    👋 Hello friends and family! This is the destination for incredibly detailed
+    stuff 🤷‍♂️🤷‍♀️ ... brought to you by Grant and Meghan's brains! 🧠
   </p>
   <p>
-    If you're looking for information about the event, look no further!
-    Please click the "Info" tab at the top for all the details regarding
-    our plans for the wedding.
+    If you're looking for information about the event, look no further! Keep
+    scrolling and you will find all the details regarding our plans for the
+    wedding.
   </p>
   <p>
-    We will be doing RSVPs through this website as well as menu options.
-    If you want to knock out the RSVP for us, go to the "RSVP" tab at the
-    top and follow the instructions.
+    We will be doing RSVPs through this website. If you want to knock out the
+    RSVP for us, go to the "RSVP" tab at the top and follow the instructions.
   </p>
   <p>Looking forward to seeing everyone soon!</p>
   <p class="pull-right">- Grant and Meghan 🫶</p>
   <br />
+</div>
+<div class="photo-gallery-pictures">
+  <img src="../../assets/images/num1.jpeg" loading="auto" alt="" />
+  <img src="../../assets/images/num2.jpeg" loading="auto" alt="" />
+  <img src="../../assets/images/num3.jpeg" loading="auto" alt="" />
+  <img
+    style="object-position: 100% 0"
+    src="../../assets/images/num4.jpeg"
+    loading="auto"
+    alt=""
+  />
+</div>
+<div class="welcome-section-2">
+  <h2>The Schedule 🧐</h2>
+  <hr />
+  <br />
+  <p>... TBD :)</p>
+  <!-- <p style="font-style: italic">What time is this amazing event.</p>
+  <p>It'll be on Saturday, June 17, 2023 at 5:00 PM.</p>
+  <br />
+  <p style="font-style: italic">Where is this amazing event going to be?</p>
+  <p>
+    It is taking place at Malachi Meadows.
+    <a href="https://www.malachimeadows.com/" target="_blank"
+      >Malachi Meadows</a
+    >
+    is a venue in the rural part of Wilmington. We suggest staying in this hotel
+    in downtown Wilmington called
+    <a
+      href="https://www.hilton.com/en/hotels/ilmcces-embassy-suites-wilmington-riverfront/?SEO_id=GMB-ES-ILMCCES"
+      >Embassy Suites by Hilton Wilmington Riverfront</a
+    >.
+  </p>
+  <br /> -->
 </div>
