--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -99,8 +99,8 @@
     <div class="flexbox-item flexbox-item-1">
       <h4>Answer</h4>
       <h5>
-        Please arrive 25-30 minutes before the ceremony. It'll be at 5, so bring
-        that positive spirit!
+        Please arrive 25-30 minutes before the ceremony. It'll be at 5 p.m., so
+        bring that positive spirit!
       </h5>
     </div>
   </div>
