--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="footer-section">
   <h2>Need to Contact Us?</h2>
-  <p>Don't ... we're busy conquering the world with one Risk at a time.</p>
+  <p>Don't ... we're busy conquering the world, taking one Risk at a time.</p>
   <p style="color: rgb(136, 135, 135); margin-top: 0%">
     Designed by Grant's wicked brain. 😈
   </p>
