--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -29,26 +29,26 @@
     waited until late that night to reach out to her because I assumed she would
     be mindlessly scrolling through Instagram. Around 8 pm, I sent her a snap. I
     was staring at my phone, waiting for her to open it. I finally received the
-    notification that she had opened it. I sat there and waited… and waited… and
-    waited. She never replied. I turned off my phone and continued my Breaking
-    Bad episode on Netflix. Women.
+    notification that she had opened it. I sat there and waited … and waited …
+    and waited. She never replied. I turned off my phone and continued my
+    Breaking Bad episode on Netflix. Women.
   </p>
   <p>
-    TWO MONTHS LATER… I had just gotten back to the house from school. I went up
-    into my room and caught a glimpse of myself in the mirror. I. Looked. Good.
-    And I was damn sure going to let everyone see it. I threw my mirror on the
-    ground, rolled up my sleeves, yelled at Bandit to come to me, made him lay
-    down, and flexed. I took a picture and posted it on my Instagram story
+    TWO MONTHS LATER … I had just gotten back to the house from school. I went
+    up into my room and caught a glimpse of myself in the mirror. I. Looked.
+    Good. And I was damn sure going to let everyone see it. I threw my mirror on
+    the ground, rolled up my sleeves, yelled at Bandit to come to me, made him
+    lay down, and flexed. I took a picture and posted it on my Instagram story
     (figure 2). As I was scrolling through the list of people who viewed my
     story, I saw Meghan's name pop up. I scoffed and went on with my day. Later
     that same day, I was in the gym working out when I heard my phone go off. I
     glanced over and saw “Meghan 💓 from Snapchat.” “Oh my god, oh my god, OH MY
-    GOD!” I exclaimed in a girly voice, “she… replied?”
+    GOD!” I exclaimed in a girly voice, “she … replied?”
   </p>
   <p>
     That night started the beginning of our relationship. Had I not posted that
     cocky picture of me flexing, she probably would not have ever reached out to
-    me. Are your eyes watering? Me too.
+    me. Are your eyes watering? Mine too.
   </p>
   <br />
   <div class="photo-gallery-pictures">
