--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -36,7 +36,7 @@
   />
 </div>
 <div class="welcome-section-2">
-  <h2>The Schedule 🧐</h2>
+  <h2>The Schedule 📅</h2>
   <hr />
   <br />
   <p>... TBD :)</p>
