--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,11 @@ body {
   margin: 0;
   padding: 0;
   font-size: 20px;
-  font-family: 'Sorts Mill Goudy', serif;
+  font-family: "Sorts Mill Goudy", serif;
   background-color: #4e4e4e;
   color: #4e4e4e;
   overflow: auto;
+  scroll-behavior: smooth;
 }
 
 hr {
