updated information and styles

--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -22,17 +22,14 @@
   <div class="flexbox-container">
     <div class="flexbox-item flexbox-item-1">
       <h4>Question</h4>
-      <h3>Is there a dress code?</h3>
+      <h3>What should I wear?</h3>
     </div>
     <div class="vertical"></div>
     <div class="flexbox-item flexbox-item-1">
       <h4>Answer</h4>
       <h5>Semi-Formal:</h5>
-      <h5>Ladies Example: A below-the-knee dress or a dressy skirt and top</h5>
-      <h5>
-        Gentleman Example: A dress shirt and slacks, dark or light depending on
-        your preference, with the option to wear a tie.
-      </h5>
+      <h5>Ladies Example: Cocktail dress/gown</h5>
+      <h5>Gentleman Example: Suit or a dress shirt with slacks</h5>
     </div>
   </div>
   <br /><br /><br />
@@ -80,7 +77,7 @@
       <h5>
         Yes we are! You can view our registry at this link -
         <a
-          href="https://www.amazon.com/wedding/meghan-shipman-grant-risk--may-2023/registry/MIIAQW0SK95U"
+          href="https://withjoy.com/meghan-and-grant-cla6v0dpf0065097m9sd6sutm/registry"
           target="_blank"
           >Our Registry</a
         >
@@ -99,8 +96,28 @@
     <div class="flexbox-item flexbox-item-1">
       <h4>Answer</h4>
       <h5>
-        Please arrive 25-30 minutes before the ceremony. It'll be at 5 p.m., so
-        bring that positive spirit!
+        Please arrive 25-30 minutes before the ceremony, which begins at 5pm.
+      </h5>
+    </div>
+  </div>
+  <br /><br /><br />
+  <!-- ------------------------- -->
+  <!-- ---------- FAQ ---------- -->
+  <div class="flexbox-container">
+    <div class="flexbox-item flexbox-item-1">
+      <h4>Question</h4>
+      <h3>Where can I stay?</h3>
+    </div>
+    <div class="vertical"></div>
+    <div class="flexbox-item flexbox-item-1">
+      <h4>Answer</h4>
+      <h5>
+        We have reserved some rooms at the
+        <a
+          href="https://www.hilton.com/en/book/reservation/deeplink/?ctyhocn=ILMCCES&groupCode=CESSRD&arrivaldate=2023-06-16&departuredate=2023-06-18&cid=OM,WW,HILTONLINK,EN,DirectLink&fromId=HILTONLINKDIRECT"
+          target="_blank"
+          >Embassy Suites by Hilton</a
+        >.
       </h5>
     </div>
   </div>
