--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -5,10 +5,10 @@
     Our story starts back in fourth grade at Vanstory Hills Elementary school.
     Meghan and I were in the same class with our teacher Mrs. Mund (figure 1). I
     don't recall much from that time, but I do have one strong memory. One day,
-    Mrs. Mund showed us how our pupils tightened when exposed to light and
+    Mrs. Mund showed us how our pupils constricted when exposed to light and
     dilated when in darkness. She told certain rows to turn around and face the
     person behind them. As everyone was shifting, Mrs. Mund went over to the
-    light switch. She told everyone to get close and stare at each other's eyes.
+    light switch and told everyone to get very close and stare at each other's eyes.
     I was in the last row of the class, so the girl in front of me turned
     around. Mrs. Mund proceeded to count down, and when she turned off the
     lights, we watched our partner's pupils dilate. Many years from that day,
@@ -17,15 +17,15 @@
     demonstration, and she told me she did. She then told me that she was the
     girl that turned around and gazed into my eyes. She remembers it vividly
     because I was apparently her fourth-grade crush. Huh. I knew that Beiber
-    hair worked…
+    hair I was sporting worked…
   </p>
   <p>
     After fourth grade, Meghan and I never were near one another. Her family
     moved to Grays Creek (20 minutes outside Fayetteville), and I stayed in
     town. We had always known of one another but never communicated. After many
-    heartbreaks and dumb assignments, we were both approaching graduation.
-    Around March 2019, our senior year, I looked through Instagram and found
-    Meghan. She was (and still is) HOT, and I knew I had to try my luck. I
+    heartbreaks and dumb assignments, we were both approaching high school graduation.
+    Around March 2019, our senior year, I was looking through Instagram and discovered
+    Meghan's profile. She was (and still is) smokin' HOT, and I knew I had to try my luck at catching her eye ... a second time . I
     waited until late that night to reach out to her because I assumed she would
     be mindlessly scrolling through Instagram. Around 8 pm, I sent her a snap. I
     was staring at my phone, waiting for her to open it. I finally received the
@@ -41,7 +41,7 @@
     lay down, and flexed. I took a picture and posted it on my Instagram story
     (figure 2). As I was scrolling through the list of people who viewed my
     story, I saw Meghan's name pop up. I scoffed and went on with my day. Later
-    that same day, I was in the gym working out when I heard my phone go off. I
+    that same day, I was in the gym working out when I heard my phone ping. I
     glanced over and saw “Meghan 💓 from Snapchat.” “Oh my god, oh my god, OH MY
     GOD!” I exclaimed in a girly voice, “she … replied?”
   </p>
