--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -90,3 +90,13 @@ a {
   color: green;
   font-style: italic;
 }
+
+table {
+  margin: auto;
+  align-items: center;
+}
+
+table td {
+  padding: 10px 20px;
+  font-size:x-large;
+}
