--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -27,10 +27,15 @@
 <div class="photo-gallery-pictures">
   <img src="../../assets/images/num1.jpeg" loading="auto" alt="" />
   <img src="../../assets/images/num2.jpeg" loading="auto" alt="" />
-  <img src="../../assets/images/num3.jpeg" loading="auto" alt="" />
   <img
-    style="object-position: 100% 0"
-    src="../../assets/images/num4.jpeg"
+    style="object-position: 45% 50%"
+    src="../../assets/images/num3.jpg"
+    loading="auto"
+    alt=""
+  />
+  <img
+    style="object-position: 60% 50%"
+    src="../../assets/images/num4.jpg"
     loading="auto"
     alt=""
   />
@@ -39,22 +44,26 @@
   <h2>The Schedule 📅</h2>
   <hr />
   <br />
-  <p>... TBD :)</p>
-  <!-- <p style="font-style: italic">What time is this amazing event.</p>
-  <p>It'll be on Saturday, June 17, 2023 at 5:00 PM.</p>
-  <br />
-  <p style="font-style: italic">Where is this amazing event going to be?</p>
-  <p>
-    It is taking place at Malachi Meadows.
-    <a href="https://www.malachimeadows.com/" target="_blank"
-      >Malachi Meadows</a
-    >
-    is a venue in the rural part of Wilmington. We suggest staying in this hotel
-    in downtown Wilmington called
-    <a
-      href="https://www.hilton.com/en/hotels/ilmcces-embassy-suites-wilmington-riverfront/?SEO_id=GMB-ES-ILMCCES"
-      >Embassy Suites by Hilton Wilmington Riverfront</a
-    >.
-  </p>
-  <br /> -->
+  <table>
+    <tr>
+      <th>Time</th>
+      <th>Event</th>
+    </tr>
+    <tr>
+      <td>5:00 - 5:30</td>
+      <td>Ceremony</td>
+    </tr>
+    <tr>
+      <td>5:30 - 6:30</td>
+      <td>Cocktail Hour</td>
+    </tr>
+    <tr>
+      <td>6:30 - 7:30</td>
+      <td>Dinner</td>
+    </tr>
+    <tr>
+      <td>7:30 - 11:00</td>
+      <td>Party Time!</td>
+    </tr>
+  </table>
 </div>
