- last minute changes - added ability to mass import guest list

--- a/src/app/rsvp-verify/rsvp-verify.component.html
+++ b/src/app/rsvp-verify/rsvp-verify.component.html
@@ -13,7 +13,9 @@
       <p>Currie, NC 28435</p>
       <br />
       <p style="font-style: italic">Attire</p>
-      <p>TBD</p>
+      <p>Semi-Formal:</p>
+      <p>Ladies Example: Cocktail dress/gown</p>
+      <p>Gentleman Example: Suit or a dress shirt with slacks</p>
       <br />
       <p style="font-style: italic">Additional info about place:</p>
       <p>
