--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -67,3 +67,28 @@
     </tr>
   </table>
 </div>
+<div class="welcome-section-3">
+  <h2>Useful Links 🔗</h2>
+  <hr />
+  <br />
+  <a href="http://withjoy.com/mgweddingregistry/registry" target="_blank">
+    <img
+      src="../../assets/images/clipboard.png"
+      loading="auto"
+      alt="Checklist image"
+    />
+    <br />
+    Click here to view the registry!
+  </a>
+  <br />
+  <br />
+  <br />
+  <a
+    href="https://www.hilton.com/en/book/reservation/deeplink/?ctyhocn=ILMCCES&groupCode=CESSRD&arrivaldate=2023-06-16&departuredate=2023-06-18&cid=OM,WW,HILTONLINK,EN,DirectLink&fromId=HILTONLINKDIRECT"
+    target="_blank"
+  >
+    <img src="../../assets/images/room.png" loading="auto" alt="Room image" />
+    <br />
+    Book a room!
+  </a>
+</div>
