added other hotel options

--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -76,9 +76,7 @@
       <h4>Answer</h4>
       <h5>
         Yes we are! You can view our registry at this link -
-        <a
-          href="https://withjoy.com/mgweddingregistry/registry"
-          target="_blank"
+        <a href="https://withjoy.com/mgweddingregistry/registry" target="_blank"
           >Our Registry</a
         >
       </h5>
@@ -118,6 +116,38 @@
           target="_blank"
           >Embassy Suites by Hilton</a
         >.
+        <p>Other options include:</p>
+        <ul>
+          <li>
+            <a
+              href="https://www.bestwestern.com/en_US/book/hotel-rooms.34136.html"
+              target="_blank"
+              >Best Western</a
+            >
+          </li>
+          <li>
+            <a href="https://www.thehivewilmington.com" target="_blank"
+              >The Hive</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.hilton.com/en/hotels/ilmdohx-hampton-wilmington-downtown/"
+              target="_blank"
+              >Hampton Inn Downtown</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.marriott.com/en-us/hotels/ilmwc-courtyard-wilmington-downtown-historic-district/overview/"
+              target="_blank"
+              >Courtyard</a
+            >
+          </li>
+          <li>
+            <a href="https://hotelballast.com" target="_blank">Hotel Ballast</a>
+          </li>
+        </ul>
       </h5>
     </div>
   </div>
