--- a/src/app/faq/faq.component.css
+++ b/src/app/faq/faq.component.css
@@ -34,6 +34,11 @@
   min-height: 100px;
 }
 
+/* li no style, left aligned */
+li {
+  list-style-type: none;
+}
+
 @media only screen and (max-width: 768px) {
   .faq-section h1 {
     padding-top: 20%;
